Add new scenarios, change progress bars

--- a/index.html
+++ b/index.html
@@ -21,14 +21,19 @@
 
 <div class="progress-container">
   <div>
-    <p>Stability:</p>
-    <progress id="stability-progress" value="0" max="30"></progress>
-    <span id="stability-change" class="change"></span>
+    <p>Officer Appointment</p>
+    <progress id="appointment-progress" value="0" max="30"></progress>
+    <span id="appointment-change" class="change"></span>
   </div>
   <div>
-    <p>Coup Risk:</p>
-    <progress id="coupRisk-progress" value="0" max="30"></progress>
-    <span id="coupRisk-change" class="change"></span>
+    <p>Economic Coup-Proofing</p>
+    <progress id="economic-progress" value="0" max="30"></progress>
+    <span id="economic-change" class="change"></span>
+  </div>
+  <div>
+    <p>Social Composition</p>
+    <progress id="social-progress" value="0" max="30"></progress>
+    <span id="social-change" class="change"></span>
   </div>
 </div>
 
