--- a/ending.html
+++ b/ending.html
@@ -9,6 +9,9 @@
 <body>
   <div class="container">
     <h1>Game Over</h1>
+    <div class="ending-timeout">
+      <p id="ending-timeout"></p>
+    </div>
     <div class="ending">
       <p id="ending"></p>
     </div>
