Fix issues with data loading

--- a/instructions.html
+++ b/instructions.html
@@ -9,14 +9,24 @@
 <body>
   <div class="container">
     <h1>Instructions</h1>
-    <p>
-      Welcome to the Coup-Proofing Game! In this game, you will face various scenarios related to political stability and coup risk. Your goal is to make decisions that will keep your country stable and coup-proof.
+    <p style = "text-align:left;">
+      Welcome to the Coup-Proofing Game! In this game, you become an incumbent authoritarian dictator. Your goal is to coup-proof your regime.
     </p>
-    <p>
-      You will be presented with different scenarios and two options to choose from. Select the option that you think will best help maintain stability and prevent a coup. Be careful, as some decisions might have unintended consequences.
+    <p style = "text-align:left;">
+      You will be presented with different scenarios and two options to choose from. Select the option that you think will best help prevent a coup.
     </p>
-    <p>
-      Keep an eye on the progress bars for Stability and Coup Risk. Your objective is to maximize stability while minimizing coup risk.
+    <p style = "text-align:left;">
+      After selecting an option, the progress bars on the game will update. An explanation of the right decision will be provided immediately after your selection.
+    </p>
+    <p style = "text-align:left;">
+      This game is timed, so you have 180 seconds to make your decisions. During explanations, the timer pauses.
+    </p>
+    <p style = "text-align:left;">
+      The three progress bars are Officer Appointment, Economic Coup-Proofing, and Social Composition. 
+      These factors, as well as the decisions, are based on the paper <a href="https://www.tandfonline.com/doi/full/10.1080/13629395.2014.932537">"Does Coup-Proofing Work?"</a> written by Holger Albrecht.
+    </p>
+    <p style = "text-align:left;">
+      To restart at any point, reload the game.
     </p>
     <button onclick="window.location.href='index.html'">Start Game</button>
   </div>
