--- a/ending.html
+++ b/ending.html
@@ -15,7 +15,7 @@
     <div class="ending">
       <p id="ending"></p>
     </div>
-    <button onclick="window.location.href='index.html'">Play Again</button>
+    <button id="start-btn">Play Again</button>
   </div>
   <script src="scripts.js"></script>
 </body>
