Add new scenarios, add more instructions

--- a/instructions.html
+++ b/instructions.html
@@ -19,10 +19,10 @@
       After selecting an option, the progress bars on the game will update. An explanation of the right decision will be provided immediately after your selection.
     </p>
     <p style = "text-align:left;">
-      This game is timed, so you have 180 seconds to make your decisions. During explanations, the timer pauses.
+      This game is timed, so you have 180 seconds to make all of your decisions. The game will end if your decisions are not made in this time. During explanations, the timer pauses.
     </p>
     <p style = "text-align:left;">
-      The three progress bars are Officer Appointment, Economic Coup-Proofing, and Social Composition. 
+      The three progress bars, which determine the efficacy of your coup-proofing, are Officer Appointment, Economic Coup-Proofing, and Social Composition. 
       These factors, as well as the decisions, are based on the paper <a href="https://www.tandfonline.com/doi/full/10.1080/13629395.2014.932537">"Does Coup-Proofing Work?"</a> written by Holger Albrecht.
     </p>
     <p style = "text-align:left;">
