Change instructions button text

--- a/instructions.html
+++ b/instructions.html
@@ -28,7 +28,7 @@
     <p style = "text-align:left;">
       To restart at any point, reload the game.
     </p>
-    <button onclick="window.location.href='index.html'">Start Game</button>
+    <button onclick="window.location.href='index.html'">Continue Game</button>
   </div>
 </body>
 </html>
